Added delete page function for new pages

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 }
 
-#content {
+.content {
 	display: flex;
 	height: 100vh;
 	flex-direction: column;
@@ -30,12 +30,20 @@ a:hover {
 }
 
 nav {
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
+	transition-duration: 500ms;
+	transition-timing-function: ease-in-out;
+}
+
+.nav-home {
+	align-self: flex-end;
 	height: 6%;
-	position: fixed;
+	position: absolute;
+}
+
+.nav-secondary {
+	flex: 0;
+	height: 6%;
+	position: absolute;
 }
 
 ul {
