--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,6 +30,7 @@ a:hover {
 }
 
 nav {
+	margin-top: 1rem;
 	align-self: flex-end;
 	transition-duration: 1000ms;
 	transition-timing-function: ease-in-out;
@@ -105,7 +106,7 @@ ul {
 	grid-template-columns: 1fr 1fr;
 	justify-items: center;
 	align-items: center;
-	grid-auto-rows: 40%;
+	grid-auto-rows: 45%;
 	gap: 2rem;
 }
 
@@ -116,6 +117,7 @@ ul {
 	background-color: #f1d8d8;
 	border-radius: 1rem;
 	align-items: center;
+	overflow: hidden;
 }
 
 .menu-img {
@@ -124,4 +126,27 @@ ul {
 	object-fit: cover;
 	padding-left: 0.5rem;
 	border-radius: 1rem;
+}
+
+.menu-item-text {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+	padding: 1rem;
+}
+
+.menu-item-title {
+	font-size: 2.5rem;
+	letter-spacing: 0.2rem;
+	margin: 0;
+}
+
+.menu-item-description {
+	font-size: 1.5rem;
+}
+
+.menu-item-price {
+	font-size: 1.5rem;
+	font-weight: bold;
 }
