--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -113,7 +113,7 @@ ul {
 
 .menu-card {
 	display: flex;
-	width: 80%;
+	width: 76%;
 	height: 100%;
 	background-color: #f1d8d8;
 	border-radius: 1rem;
@@ -122,7 +122,7 @@ ul {
 }
 
 .menu-img {
-	width: 50%;
+	min-width: 50%;
 	height: 95%;
 	object-fit: cover;
 	padding-left: 0.5rem;
