--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alatsi&family=Montserrat:ital,wght@1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alatsi&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 
 body {
 	padding: 0;
@@ -151,4 +152,51 @@ ul {
 	margin-top: 0;
 	font-size: 1.5rem;
 	font-weight: bold;
+}
+
+.about-container {
+	align-items: center;
+	justify-items: center;
+	display: grid;
+	grid-template-columns: 0.3fr repeat(3, 1fr);
+	grid-template-rows: 0.5fr 1fr;
+	margin: 10rem 20rem;
+}
+
+.about-title-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	grid-row: 1 / -1;
+	width: 100%;
+	height: 100%;
+	background-color: #f1d8d8;
+}
+
+.about-title {
+	font-size: 5.5rem;
+	font-weight: 600;
+	text-align: center;
+}
+
+.about-text {
+	grid-column: 2 / -1;
+	font-size: 3.5rem;
+	text-align: center;
+	padding-right: 0 2rem;
+	font-style: italic;
+	color: #f1d8d8;
+	margin-bottom: 3rem;
+}
+
+.about-img {
+	width: 100%;
+	overflow: hidden;
+}
+
+.about-img-container {
+	grid-column: 2 / -1;
+	display: flex;
+	border-bottom: solid #f1d8d8 0.5rem;
+	border-right: solid #f1d8d8 0.5rem;
 }
